--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.database.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.database.hikari.jdbc-url=jdbc:mysql://localhost:3306/insight?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
+spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:3306/insight?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
 spring.datasource.hikari.username=root
 spring.datasource.hikari.password=rootpw
 spring.datasource.hikari.connection-test-query=SELECT 1
